prevent menus from overlapping with tables

--- a/app/assets/stylesheets/layout/_context_menu.sass
+++ b/app/assets/stylesheets/layout/_context_menu.sass
@@ -3,6 +3,7 @@
 .context-menu
   float: right
   margin-top: 0.65rem
+  margin-bottom: 0.65rem
   display: inline-block
   position: relative
   z-index: 10
